--- a/ui/create.ui
+++ b/ui/create.ui
@@ -2024,7 +2024,7 @@ is not yet supported.&lt;/small&gt;</property>
                               <object class="GtkLabel" id="summary-title">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label">Ready to begin the installation</property>
+                                <property name="label" translatable="yes">Ready to begin the installation</property>
                                 <property name="use_markup">True</property>
                                 <property name="xalign">0</property>
                               </object>
